Removed border-radius from lower corners to prevent gaps

--- a/source/assets/css/jquery-ui-1.10.3.widgets.css
+++ b/source/assets/css/jquery-ui-1.10.3.widgets.css
@@ -163,13 +163,13 @@
 .ui-corner-bottom,
 .ui-corner-left,
 .ui-corner-bl {
-	border-bottom-left-radius: 4px;
+	border-bottom-left-radius: 0px;
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
-	border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 0px;
 }
 
 /* Overlays */
